Add WebSocket support and update message structure